modified css for collapsebody due to bug in IE6-7: Flowchart visible through closed collapse box

--- a/d3web-KnowWE/KnowWE/src/main/webapp/KnowWEExtension/css/general.css
+++ b/d3web-KnowWE/KnowWE/src/main/webapp/KnowWEExtension/css/general.css
@@ -868,3 +868,18 @@ font-size:120%;
 #knowwe-autocompletion strong{
     color: rgb(0, 0, 255);
 }
+
+
+/* ################################################## */
+/* -------------- Flowchart           --------------- */
+/* ################################################## */
+
+/*
+ due to bug in IE6+7 collapse box body has to be relative positioned,
+ otherwise flowchart is visible through closed collapse box.
+ see also: http://www.rowanw.com/bugs/overflow_relative.htm 
+*/
+.collapsebody{
+    position: relative
+} 
+
